# mastering-haskell

./: README.md  compile-and-run.sh  course.cabal  run_slave1.sh  run_slave1_continuously.sh  run_slave2.sh  run_slave2_continuously.sh  run_slave3.sh  run_slave3_continuously.sh  run_tests.sh  run_tests_continuously.sh  stack.yaml  step-by-step.sh  unsafePerformIO.cabal
scripts/: kill_recursively.sh  run_slave1_and_hang.sh  run_slave2_and_hang.sh  run_slave3_and_hang.sh  run_tests_and_hang.sh
src/: Console.hs  Main.c  Main.hs
