name:                course
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable course
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base
  hs-source-dirs:      src
  c-sources:           src/Main.c
  default-language:    Haskell2010
  ghc-options: -W -Wall
